--- a/calidad/033/index.html
+++ b/calidad/033/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Refresh" content="0;url=https://utitalco.online/calidad/033/index.html">
+    <!-- <meta http-equiv="Refresh" content="0;url=https://utitalco.online/calidad/033/index.html"> -->
+     
     <title>PROTOCOLOS QAQC - UT ITALCO</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
